Missing move handle and flickering in FileBrowser #67008

Closed
opened 2019-07-15 18:46:43 +02:00 by Lendo · 6 comments

System Information
Operating system: Linux-5.2.0-zen1-1-zen-x86_64-with-arch 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26

Blender Version
Broken: version: 2.80 (sub 74), branch: makepkg, commit date: 2019-07-11 13:50, hash: 06312c6d2d
Worked: (optional)

Short description of error
Minor bug! Missing move handle and flickering in FileBrowser

Exact steps for others to reproduce the error

  • file -> open
  • the move handle(cursor with two arrows pointing left and right), to scale the side panel on the left side of the file browser, is only available at the upper part
  • also the topbar is flickering while scaling
    blender_bug.mp4
**System Information** Operating system: Linux-5.2.0-zen1-1-zen-x86_64-with-arch 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26 **Blender Version** Broken: version: 2.80 (sub 74), branch: makepkg, commit date: 2019-07-11 13:50, hash: `06312c6d2d` Worked: (optional) **Short description of error** Minor bug! Missing move handle and flickering in FileBrowser **Exact steps for others to reproduce the error** - file -> open - the move handle(cursor with two arrows pointing left and right), to scale the side panel on the left side of the file browser, is only available at the upper part - also the topbar is flickering while scaling [blender_bug.mp4](https://archive.blender.org/developer/F7611104/blender_bug.mp4)
Author

Added subscriber: @Lendo

Added subscriber: @Lendo

Added subscriber: @bkambalur

Added subscriber: @bkambalur

Added subscribers: @JulianEisel, @mano-wii

Added subscribers: @JulianEisel, @mano-wii
Julian Eisel was assigned by Germano Cavalcante 2019-07-16 14:11:36 +02:00

@JulianEisel, could you take a look?
(Must have some wrongly sized action zone).

@JulianEisel, could you take a look? (Must have some wrongly sized action zone).
Julian Eisel was unassigned by Andrea Weikert 2019-07-17 00:05:13 +02:00
Andrea Weikert self-assigned this 2019-07-17 00:05:13 +02:00

This issue was referenced by 38380ddca3

This issue was referenced by 38380ddca373cd7f49e3d6e831480ff05a2af72e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67008
No description provided.